SchemaMetricsApplicationService