@@ -1,6 +1,7 @@
 package jku.bise.jsonschemavalidator.applicationservice.draftkeywords;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class Draft03Keywords {
@@ -39,7 +40,7 @@ public class Draft03Keywords {
 	
 	
 	
-	public final static List<String> KEYWORDS_LIST = new ArrayList<>(List.of(
+	public final static List<String> KEYWORDS_LIST = Collections.unmodifiableList(new ArrayList<>(List.of(
 			PROPERTIES,
 			ID,
 			SCHEMA,
@@ -69,6 +70,6 @@ public class Draft03Keywords {
 			DIVISIBLE_BY,
 			DISALLOW,
 			EXTENDS
-			));
+		)));
 	
 }
