@@ -1,6 +1,7 @@
 package jku.bise.jsonschemavalidator.applicationservice.draftkeywords;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class Draft06Keywords {
@@ -53,7 +54,7 @@ public class Draft06Keywords {
 	public final static String ONE_OF = "oneOf";
 	public final static String NOT = "not";
 	
-	public final static List<String> KEYWORDS_LIST = new ArrayList<>(List.of(
+	public final static List<String> KEYWORDS_LIST = Collections.unmodifiableList(new ArrayList<>(List.of(
 			PROPERTIES,
 			ID,
 			SCHEMA,
@@ -93,9 +94,9 @@ public class Draft06Keywords {
 			ONE_OF,
 			NOT
 			
-		));
+		)));
 	
-	public final static List<String> TYPE_LIST = new ArrayList<>(List.of(
+	public final static List<String> TYPE_LIST = Collections.unmodifiableList(new ArrayList<>(List.of(
 			TYPE_ARRAY,
 			TYPE_BOOLEAN,
 			TYPE_INTEGER,
@@ -103,6 +104,6 @@ public class Draft06Keywords {
 			TYPE_NUMBER,
 			TYPE_OBJECT,
 			TYPE_STRING
-	));
+	)));
 	
 }
