@@ -1,6 +1,7 @@
 package jku.bise.jsonschemavalidator.applicationservice.draftkeywords;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class Draft201909Keywords {
@@ -88,7 +89,7 @@ public class Draft201909Keywords {
 	public final static String ONE_OF = "oneOf"; //
 	public final static String NOT = "not"; //
 	
-	public final static List<String> KEYWORDS_LIST = new ArrayList<>(List.of(
+	public final static List<String> KEYWORDS_LIST = Collections.unmodifiableList(new ArrayList<>(List.of(
 			PROPERTIES,
 			ID,
 			SCHEMA,
@@ -149,9 +150,9 @@ public class Draft201909Keywords {
 			ONE_OF,
 			NOT
 			
-	));
+	)));
 	
-	public final static List<String> TYPE_LIST = new ArrayList<>(List.of(
+	public final static List<String> TYPE_LIST = Collections.unmodifiableList(new ArrayList<>(List.of(
 			TYPE_ARRAY,
 			TYPE_BOOLEAN,
 			TYPE_INTEGER,
@@ -159,6 +160,6 @@ public class Draft201909Keywords {
 			TYPE_NUMBER,
 			TYPE_OBJECT,
 			TYPE_STRING
-	));
+	)));
 	
 }
